beginning of html page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Hello</h1>
+    <p>
+        My name is Mary and I am a software developer located in Phoenix, AZ, who has a background in Software Development and cloud tech. 
+        I am currently seeking a career in software development specifically in cloud technologies. I am a technical learner who enjoys 
+        creating and helping others achieve a common goal. I am a fast learner who is able to pick up on skills and pick up multiple tasks 
+        at once with ease.
+    </p>
+</body>
+</html>
