--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://maryclayton512.github.io</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Phoenix, USA</span></li>
                 </ul>
               </div>
@@ -131,7 +131,7 @@
           <h2>Facts</h2>
           <p></p>As a software engineer and cloud architect experienced since 2019, 
           I have volunteered my hours to building websites, building my portfolio,
-          and mentored students from around the world virtually. 
+          and mentored students from around the US virtually. 
         </div>
 
         <div class="row">
@@ -247,7 +247,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p></p>
         </div>
 
         <div class="row">
@@ -270,13 +270,13 @@
               <h4>Bachelors of Science in Computer Science</h4>
               <h5>2021-2024</h5>
               <p><em>Devry University, Phoenix, AZ</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <p></p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Arts in Digital Design</h4>
+              <h4>Bachelor of Arts in Web Design</h4>
               <h5>2014 - 2018</h5>
               <p><em>Grand Canyon University, Phoenix, AZ</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <p></p>
             </div>
           </div>
           <div class="col-lg-6">
