--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
                 and deploy software applications within a team.</em></p>
               <ul>
                 <li>Phoenix, AZ</li>
-                <li>(623) 233-4950</li>
                 <li>maryclayton512@gmail.com</li>
               </ul>
             </div>
@@ -280,10 +279,24 @@
             </div>
           </div>
           <div class="col-lg-6">
-            <h3 class="resume-title">Volunteer Experience</h3>
+            <h3 class="resume-title">Experience</h3>
+            <div class="resume-item">
+              <h4>Software Support Specialist </h4>
+              <h5> 2022</h5>
+              <p><em>Phoenix, AZ, CyberMetrics </em></p>
+              <ul>
+                <li>Provide telephone, Internet chat, and live remote technical support for all CyberMetrics software applications.</li>
+                <li>Maintain the Tech-Support database log of incoming technical support calls, questions and answers given (Support Tickets).</li>
+                <li>Work with software programmers on developing and testing new software versions and provides feedback on end-user suggestions, complaints and problems both verbally (when necessary) and through the on-line project management system.</li>
+                <li>Assist with the technical document creation, software manuals and newsletter contributions.</li>
+                <li>Complete Data Imports, Custom Reports and other Custom Projects as needed.</li>
+                <li>Complete any certification courses as may be required for the position or for career development.</li>
+                <li>Assist Client Solutions, Sales and Development as needed e.g. assist in creation of sample data for testing and sales, provide technical assistance to sales demonstrations.</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>Software Developer Mentor</h4>
-              <h5> 2021- Present</h5>
+              <h5> 2021- 2022</h5>
               <p><em>Virtual/Online, Code the Dream </em></p>
               <ul>
               </ul>
@@ -314,7 +327,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Projects worked on with as a team or on my own.</p>
         </div>
 
         <div class="row">
