--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -36,7 +38,7 @@
 </head>
 
 <body>
-
+  
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -63,12 +65,13 @@
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="https://github.com/maryclayton512" class="github"><i class="bx bxl-github"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/marykathydev/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
+              
 
-  <main id="main">
+  <main id="main"> 
 
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
@@ -77,11 +80,16 @@
         <div class="section-title">
           <h2>About</h2>
           <p>My name is Mary and I am a software developer located in Phoenix, AZ, 
-            who has a background in Software Development and cloud tech. I am currently 
-            seeking a career in software development specifically in cloud technologies. 
-            I am a technical learner who enjoys creating and helping others achieve a 
-            common goal. I am a fast learner who is able to pick up on skills and pick 
-            up multiple tasks at once with ease.</p>
+            who has a background in Software Development and cloud tech. 
+            My journey started at Bloom Insitute of Technology and DeVry University in 2019. 
+            I started working with AI and cloud technology in 2020 and beyond. 
+            Since then, I have learned many programming languages and cloud database systems throughout my career of being a software developer. 
+            I have worked for Next Capital Tech, CyberMetrics, DoinGud, and Randstad in previous and current job/intern/job experiences. 
+            I am most skilled in Python, C#, GoLang, and Javascript.
+            As for cloud databases, I have worked with AWS, Google Cloud Platform, and Azure. 
+            Notably, I won a hackathon best-in-class award in 2020 where I designed and developed a mobile application within a team. 
+            I also have won scholarships such as Women in Tech and have been on the dean's list at two different colleges. 
+            I am a part of NSCS, IEEE, and Women in Tech for Phoenix.</p>
         </div>
 
         <div class="row">
@@ -89,7 +97,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Cloud Architect &amp; Software Engineer.</h3>
+            <h3>Cloud Architect &amp; Software Developer.</h3>
             <p class="fst-italic">
               'Every great dream begins with a dreamer. 
               Always remember, you have within you the strength, 
@@ -105,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>26</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maryclayton512@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Available to work:</strong> <span>Yes</span></li>
@@ -267,7 +275,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelors of Science in Computer Science</h4>
-              <h5>2021-2024</h5>
+              <h5>2019-2022</h5>
               <p><em>Devry University, Phoenix, AZ</em></p>
               <p></p>
             </div>
@@ -501,7 +509,7 @@
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 623 233 4950</p>
+                <p>+1 602 402 5137</p>
               </div>
 
             </div>
