--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Cloud Architect &amp; Software Developer.</h3>
+            <h3>Cloud Architect, Designer &amp; Software Developer.</h3>
             <p class="fst-italic">
               'Every great dream begins with a dreamer. 
               Always remember, you have within you the strength, 
@@ -108,14 +108,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://maryclayton512.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Phoenix, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Phoenix, AZ</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>maryclayton512@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors of Science in Computer Science and Web Design</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>mary.cathlean@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Available to work:</strong> <span>Yes</span></li>
                 </ul>
               </div>
@@ -137,9 +137,10 @@
 
         <div class="section-title">
           <h2>Facts</h2>
-          <p></p>As a software engineer and cloud architect experienced since 2019, 
+          <p></p>As a software developer, designer, and cloud architect experienced since 2019, 
           I have volunteered my hours to building websites, building my portfolio,
-          and mentored students from around the US virtually. 
+          and mentored students from around the US virtually. Currently, I am working with DoinGud again on some small
+          projects as a web designer/developer.
         </div>
 
         <div class="row">
@@ -222,7 +223,7 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill">PHP <i class="val">45%</i></span>
+              <span class="skill">C# <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -236,7 +237,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Python <i class="val">90%</i></span>
+              <span class="skill"> ASP.NET <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -275,7 +276,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Bachelors of Science in Computer Science</h4>
-              <h5>2019-2022</h5>
+              <h5>2021-2023</h5>
               <p><em>Devry University, Phoenix, AZ</em></p>
               <p></p>
             </div>
@@ -311,7 +312,7 @@
             </div>
             <div class="resume-item">
               <h4>Software Developer</h4>
-              <h5>2020- 2021</h5>
+              <h5>2020- Current</h5>
               <p><em>Virtual/Online, DoinGud</em></p>
               <ul>
                 <li>Operated in a team of 20 people to conceptualize, design, build and/or modify applications for mobile and web by using React, Node.Js, Java, and AWS</li>
